# assimp

./: .gitignore  CMakeLists.txt  dependencies.json
code/: CMakeLists.txt  ObjTools.h
code/Assbin/: AssbinExporter.cpp  AssbinLoader.cpp
code/Common/: BaseImporter.cpp  DefaultIOStream.cpp  DefaultIOSystem.cpp  SpatialSort.cpp  Version.cpp
code/PostProcessing/: JoinVerticesProcess.cpp
contrib/zlib/: CMakeLists.txt
include/assimp/: BaseImporter.h  defs.h
workspaces/: SConstruct
